--- a/HelloWorldAppNETReact/HelloWorldAppNETReact.csproj
+++ b/HelloWorldAppNETReact/HelloWorldAppNETReact.csproj
@@ -25,6 +25,7 @@
     <None Remove="ClientApp\components\Board\index.tsx" />
     <None Remove="ClientApp\components\Board\test.ts" />
     <None Remove="ClientApp\components\EditableNote\index.tsx" />
+    <None Remove="ClientApp\components\Header\index.tsx" />
     <None Remove="ClientApp\components\StickyNote\index.tsx" />
     <None Remove="ClientApp\components\StickyNote\test.ts" />
     <None Remove="ClientApp\components\BulletTask\index.tsx" />
@@ -42,6 +43,7 @@
     <TypeScriptCompile Include="ClientApp\components\Board\index.tsx" />
     <TypeScriptCompile Include="ClientApp\components\Board\test.ts" />
     <TypeScriptCompile Include="ClientApp\components\EditableNote\index.tsx" />
+    <TypeScriptCompile Include="ClientApp\components\Header\index.tsx" />
     <TypeScriptCompile Include="ClientApp\components\StickyNote\index.tsx" />
     <TypeScriptCompile Include="ClientApp\components\StickyNote\test.ts" />
     <TypeScriptCompile Include="ClientApp\components\BulletTask\index.tsx" />
