--- a/HelloWorldAppNETReact/package.json
+++ b/HelloWorldAppNETReact/package.json
@@ -48,6 +48,7 @@
         "axios": "^0.18.0",
         "moment": "^2.22.2",
         "node-sass-glob-importer": "^5.1.3",
+        "radium": "^0.24.1",
         "react-draggable": "^3.0.5",
         "react-fontawesome": "^1.6.1",
         "react-moment": "^0.7.7"
